--- a/main.html
+++ b/main.html
@@ -10,13 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<div class="bx1">
-	<div class="bx2">
-		<div class="bx3">
-			<p id="para">This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>
-		</div>	
-	</div>	
-</div>	
+<div>
+        <p>This is a demo of box model try to replicate this box model in Html and Css and try to pass all the test cases.</p>
+</div>
 </body>
 
 </html>
